@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 27-Nov-2010 Christophe Demko
  # [#23523] Add Hathor override for the new My Profile view (Andrea Tarr)
+ # [#23526] mod_login module does not display correct URL while redirecting
 
 26-Nov-2010 Jean-Marie Simonet
  $ [#23449] confusing language in acl tootltip for categories and content
